Sat May  8 15:35:17 BST 2010  Colin Watson  <cjwatson@debian.org>

	* src/filenames.c (filename_info): Allow section and extension to
	  differ as long as the first character is the same.  (This is my
	  understanding of what the code was originally meant to do, but it
	  only worked if the section was exactly one character long.)

Tue Apr 27 11:02:48 BST 2010  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20100424.

Fri Apr  2 20:44:11 BST 2010  Ville Skyttä  <ville.skytta@iki.fi>

	* configure.ac: Only test for lzma if xz is missing.  Add xz to list
	  of compressors checked when deciding whether to define COMP_CAT or
	  COMP_SRC.
	* include/comp_src.h.in (comp_list): If xz is available, use it for
	  .lzma files in preference.

Fri Apr  2 20:26:41 BST 2010  Ville Skyttä  <ville.skytta@iki.fi>

	* include/comp_src.h.in (comp_list): If compress is not available,
	  use gzip to handle .Z files.

Mon Mar 29 09:36:00 BST 2010  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Wed Mar 24 11:04:46 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Fix build regression when GNU_NROFF is undefined (Savannah bug
	#29318).

	* src/man.c (add_col): New function, split out from
	  make_display_command.
	  (make_roff_command): Reinstate tbl/col logic here, as by the time
	  we get to make_display_command we've forgotten whether tbl was
	  used.
	  (make_display_command): Remove tbl/col logic, useless here.  Use
	  add_col.

Sun Mar 21 21:59:54 GMT 2010  Tanguy Ortolo  <tanguy+debian@ortolo.eu>

	* src/man.c (main): Try underscore-separated subpages as well as
	  hyphen-separated ones (Debian bug #574641).
	* man/man1/man.man1 (Finding manual pages): Document this.
	* NEWS: Document this.

Wed Mar 17 10:26:44 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import localcharset module.
	* src/encodings.c (struct charset_entry): Rename locale_charset to
	  charset_from_locale.  Update all users.