@@ -1,3 +1,8 @@
+Sat May  8 15:39:49 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/filenames.c (filename_info): Explicitly fail if the extension
+	  is zero-length.
+
 Sat May  8 15:35:17 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	* src/filenames.c (filename_info): Allow section and extension to
